--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
+    "axios-progress-bar": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
